--- a/Warranty/Warranty.API/appsettings.json
+++ b/Warranty/Warranty.API/appsettings.json
@@ -13,5 +13,8 @@
     "Key": "MySuperStrongSecretKeyWithMoreThan32Chars!",
     "Issuer": "http://localhost",
     "Audience": "http://localhost"
+  },
+  "AWS": {
+    "BacketName": "files-warranty",
   }
 }
