--- a/Warranty/Warranty.Service/Warranty.Service.csproj
+++ b/Warranty/Warranty.Service/Warranty.Service.csproj
@@ -9,9 +9,12 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="4.0.0-preview.10" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0-preview.1.25080.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.6.1" />
+    <PackageReference Include="MimeKit" Version="4.11.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
   </ItemGroup>
 
